# llm-comparison-sql-metrics

./: .gitignore  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  package-lock.json  run.sh
llm-comparison-app/: .dockerignore  .env.example  Dockerfile  Dockerfile.dev  README.md  index.html  nginx.conf  package-lock.json  package.json  render.yaml  vite.config.ts
llm-comparison-app/src/: App.css  App.tsx  env.d.ts
llm-comparison-app/src/components/: ComparisonPage.css  ComparisonPage.tsx  ModelComparison.css  ModelComparison.tsx  ModelResponse.css  ModelResponse.tsx  QualityScoreChart.css  QualityScoreChart.tsx
llm-comparison-app/src/data/: sampleQueries.ts
llm-comparison-app/src/services/: api.ts
sql_metrics_evaluator/: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
sql_metrics_evaluator/examples/: integrate_with_frontend.js  integrate_with_llm_app.py
sql_metrics_evaluator/src/: __init__.py  api.py  database.py  evaluator.py  models.py  parser.py
sql_metrics_evaluator/tests/: test_evaluator.py
src/: App.tsx
src/components/: ComparisonPage.tsx  ModelComparison.tsx
src/services/: api.ts
